--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 title: [Farshad Profile]
 description: [I will try to share some of my experiences regarding my skills!]
