--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: jekyll-theme-cayman
 title: [Farshad Zeinalinesaz]
 description: []
+github2:
+  zip_url: http://example.com/download.zip
+  another_url: another value
