--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 theme: jekyll-theme-cayman
 title: Farshad Zeinalinesaz
+{{ site.github.zip_url }}
 github:
   zip_url: http://example.com/download.zip
   another_url: another value
