--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,3 @@
 theme: jekyll-theme-cayman
 title: Farshad Zeinalinesaz
-github.zip_url:
-  zip_url: http://example.com/download.zip
-  another_url: another value
+github.  zip_url: http://example.com/download.zip
