--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Farshad Zeinalinesaz
-github.  zip_url: http://example.com/download.zip
+zip_url: http://example.com/download.zip
