--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: Farshad Zeinalinesaz
 show_downloads: ["true"]
+github:
+  zip_url: https://www.linkedin.com/in/farshad-zeinalinesaz-a772818b/
