--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ title: Farshad Zeinalinesaz
 show_downloads: ["true"]
 github:
   zip_url: https://www.linkedin.com/in/farshad-zeinalinesaz-a772818b/
+  tar_url: fzcomputerscience@gmail.com
